--- a/app/www/src/style/style.css
+++ b/app/www/src/style/style.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500&display=swap");
+
 :root {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto Mono", monospace;
 }
 
 body,
