Added YouTube chat and refactored Chat component
Added YouTube chat with a hardcoded liveChatId for now.
Changes to the Chat Component are as follows:
  - Added source icons (youtube and twitch)
  - Made it so that the message prop is a JSX.Element as to not recall
    emotify on every message.

--- a/app/www/src/components/chat/style.module.scss
+++ b/app/www/src/components/chat/style.module.scss
@@ -15,16 +15,25 @@
 }
 
 .message {
+  position: relative;
   display: flex;
   padding: .25rem 1.5rem;
+  gap: 1ch;
   color: white;
   border-radius: .1rem;
+
+  > img {
+    position: absolute;
+    top: 0;
+    left: 1ch;
+    width: 1rem;
+    height: 1rem;
+  }
 
   & :global(.content) {
     display: flex;
     flex-wrap: wrap;
     gap: 1ch;
-    margin-left: 1ch;
     align-items: center;
 
     img {
