Increased font size

--- a/www/src/components/chat/style.module.scss
+++ b/www/src/components/chat/style.module.scss
@@ -22,6 +22,7 @@
   width: fit-content;
   color: white;
   font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-size: 2rem;
   filter:
     drop-shadow(0 0 0.05rem black)
     drop-shadow(0 0 0.05rem black)
