--- a/www/src/components/chat/style.module.scss
+++ b/www/src/components/chat/style.module.scss
@@ -21,8 +21,8 @@
   gap: 1ch;
   width: fit-content;
   color: white;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
-  font-size: 2rem;
+  font-family: 'Montserrat', regular, sans-serif;
+  font-size: 1.2rem;
   filter:
     drop-shadow(0 0 0.05rem black)
     drop-shadow(0 0 0.05rem black)
